added lightbox background to every page

--- a/app/connect.html
+++ b/app/connect.html
@@ -76,6 +76,8 @@
         </nav>
         <!-- End navbar -->
 
+        <div class="lightbox-background"></div>
+
         <!-- Header -->
         <header class="fixed connect-header">
             <div class="connect-header-bg"></div>
