--- a/app/index.html
+++ b/app/index.html
@@ -77,6 +77,8 @@
             </nav>
             <!-- End navbar -->
 
+            <div class="lightbox-background"></div>
+
             <!-- Header -->
             <header class="fixed home-header">
                 <div class="home-header-bg"></div>
