--- a/app/services.html
+++ b/app/services.html
@@ -76,6 +76,8 @@
             </nav>
             <!-- End navbar -->
 
+        <div class="lightbox-background"></div>
+
         <!-- Header -->
         <header class="fixed services-header">
             <div class="services-header-bg"></div>
