--- a/app/Showcase.html
+++ b/app/Showcase.html
@@ -75,6 +75,8 @@
                 </a>
             </nav>
             <!-- End navbar -->
+            
+		<div class="lightbox-background"></div>
 
         <!-- Header -->
         <header class="fixed showcase-header">
