changed all headers to fixed height

--- a/app/Showcase.html
+++ b/app/Showcase.html
@@ -79,16 +79,16 @@
 		<div class="lightbox-background"></div>
 
         <!-- Header -->
-        <header class="fixed showcase-header">
-            <div class="showcase-header-bg"></div>
+        <header class="showcase-header">
+            <div class="showcase-header-bg">
+            	<div class="showcase-header-text text-center">
+		            <h1>
+		                Showcase
+		            </h1>
+		            <p>- our work -</p>
+		        </div>
+            </div>
         </header>
-        <div class="showcase-header-text fixed text-center">
-            <h1>
-                Showcase
-            </h1>
-            <p>- our work -</p>
-        </div>
-        <div class="header-spacer"></div>
         <div class="scroll-down" id="scroll-down-showcase">
             <div class="semi-circle"></div>
             <div class="chevron">
