--- a/app/about.html
+++ b/app/about.html
@@ -77,16 +77,16 @@
             <!-- End navbar -->
 
         <!-- Header -->
-        <header class="fixed about-header">
-            <div class="about-header-bg"></div>
+        <header class="about-header">
+            <div class="about-header-bg">
+                <div class="about-header-text text-center">
+                    <h1>
+                        about us
+                    </h1>
+                    <p>- who we are -</p>
+                </div>
+            </div>
         </header>
-        <div class="about-header-text fixed text-center">
-            <h1>
-                about us
-            </h1>
-            <p>- who we are -</p>
-        </div>
-        <div class="header-spacer"></div>
         <div class="scroll-down" id="scroll-down-about">
             <div class="semi-circle"></div>
             <div class="chevron">
