--- a/app/connect.html
+++ b/app/connect.html
@@ -79,16 +79,16 @@
         <div class="lightbox-background"></div>
 
         <!-- Header -->
-        <header class="fixed connect-header">
-            <div class="connect-header-bg"></div>
+        <header class="connect-header">
+            <div class="connect-header-bg">
+                <div class="connect-header-text text-center">
+                    <h1>
+                        connect
+                    </h1>
+                    <p>- get in touch -</p>
+                </div>
+            </div>
         </header>
-        <div class="connect-header-text fixed text-center">
-            <h1>
-                connect
-            </h1>
-            <p>- get in touch -</p>
-        </div>
-        <div class="header-spacer"></div>
         <div class="scroll-down" id="scroll-down-connect">
             <div class="semi-circle"></div>
             <div class="chevron">
