--- a/app/services.html
+++ b/app/services.html
@@ -79,16 +79,16 @@
         <div class="lightbox-background"></div>
 
         <!-- Header -->
-        <header class="fixed services-header">
-            <div class="services-header-bg"></div>
+        <header class="services-header">
+            <div class="services-header-bg">
+                <div class="services-header-text text-center">
+                    <h1>
+                        services
+                    </h1>
+                    <p>- what we do -</p>
+                </div>
+            </div>
         </header>
-        <div class="services-header-text fixed text-center">
-            <h1>
-                services
-            </h1>
-            <p>- what we do -</p>
-        </div>
-        <div class="header-spacer"></div>
         <div class="scroll-down" id="scroll-down-services">
             <div class="semi-circle"></div>
             <div class="chevron">
