removed background-attachment:fixed, edited some 'about' content

--- a/app/about.html
+++ b/app/about.html
@@ -121,7 +121,7 @@
                 </div>
                 <div class="column full">
                     <p>
-                        Taking our experience of 20 years in design, training, marketing and analysis, you can be sure you have found an agency that will understand your needs and create your
+                        Working with digital media and marketing since the early years of the Internet in Ireland we have gained a lot of experience in design, training, marketing and analysis. Rest assured you have found the right digital agency that will understand your needs and find the answers to your questions. 
                     </p>
                 </div>
             </div>
@@ -181,7 +181,7 @@
                             <h4>Sharing</h4>
                             <li>Everyone benefits when we scratch each other's backs, whether you pay it forward or keep a watchful eye on those in need.</li>
                             <h4>Diversity</h4>
-                            <li>Our experience has taught us that things are not always so black and white, but varying shades of grey and red and orange and blue.</li>
+                            <li>Our experience has taught us that things are not always so black and white, although varying shades of colours and subtle tones.</li>
                             <h4>Vision</h4>
                             <li>Inherently we believe in helping others to discover their passion, understand their mission and get clear on their goals.</li>
                         </ul>
