removed protocol from jquery link

--- a/app/about.html
+++ b/app/about.html
@@ -921,7 +921,7 @@ All you can do is try. Dropping a positive stone in the pond creates positive ri
             </div>
         </div>
 
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
         <!-- build:js scripts/vendor.js -->
         <!-- bower:js -->
