--- a/app/index.html
+++ b/app/index.html
@@ -185,7 +185,7 @@
                 <div class="column full text-center">
                     <div class="text-and-button">
                         <p>
-                            Transform your vision into a business reality
+                            We transform your vision into a business reality
                         </p>
                     </div>
                 </div>
@@ -338,7 +338,7 @@
             </div>
         </div>
         
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
         <!-- build:js scripts/vendor.js -->
         <!-- bower:js -->
