--- a/app/services.html
+++ b/app/services.html
@@ -349,7 +349,7 @@
             </div>
         </div>
 		
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
         <!-- build:js scripts/vendor.js -->
         <!-- bower:js -->
